# renovate-pep621-buildsystem-requires-reproduction

./: .gitignore  README.md  pyproject.toml  renovate-config.js  renovate.json
.github/workflows/: renovate.yml
