[project]
dependencies = [
    "pydantic>=2.8.2",
    "httpx>=0.27.2",
    "paramiko>=3.4.1",
    "scp>=0.15.0",
    "asyncio>=3.4.3",
]


requires-python = ">=3.10"

[project.optional-dependencies]
extras = [
    "pycowsay==0.0.0.2",
]

[build-system]
requires = ["pdm-backend", "pdm-build-locked==0.3.3"]

[tool.pdm.dev-dependencies]
dev = [
    # format, lint
    "mypy>=1.11.2",
    "pip>=24.2",
    "pylint>=3.2.7",
    "ruff>=0.6.3",
    # test
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "isystem-connect==9.21.268.1",
    "lauterbach-trace32-rcl>=1.1.0",
    "python-dotenv>=1.0.1",
    # doc and spec
    "gitpython>=3.1.43",
    "Sphinx>=7.4.7",
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-last-updated-by-git>=0.3.8",
    "sphinx-needs>=2.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "packaging>=24.1",
    "tomli>=2.0.1",
    "towncrier>=23.11.0",
    "toml>=0.10.2",
]
