[project]
dependencies = [
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "scp>=0.15.0",
    "asyncio>=3.4.3",
]


requires-python = ">=3.10"


[tool.pdm.dev-dependencies]
dev = [
    # format, lint
    "mypy>=1.10.1",
    "pip>=24.1.1",
    "pylint>=3.2.4",
    "ruff>=0.4.10",
    # test
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "isystem-connect==9.21.268.1",
    "lauterbach-trace32-rcl>=1.0.10",
    "python-dotenv>=1.0.1",
    # doc and spec
    "gitpython>=3.1.43",
    "Sphinx>=7.3.7",
    "sphinxcontrib-plantuml>=0.30",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-last-updated-by-git>=0.3.7",
    "sphinx-needs>=2.1.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "packaging>=24.1",
    "tomli>=2.0.1",
    "towncrier>=23.11.0",
    "toml>=0.10.2",
]
